[package]
name = "usthingy"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12", features = ["collector", "cache", "gateway"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
octocrab = "0.38"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.42"
